--- a/Commanding.html
+++ b/Commanding.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome file</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  <title>Commanding Notes</title>
+  <link rel = "stylesheet"
+        type = "text/css"
+        href = "stylesheet.css"/>
 </head>
 
 <body class="stackedit">
