Add important details

--- a/Raid Quickstart Guide.html
+++ b/Raid Quickstart Guide.html
@@ -79,7 +79,7 @@
             </ol>
             <p><img src="https://i.imgur.com/S7d7Ie3.png" alt="Masteries" style="max-width:1500px"></p>
             <ol start="3">
-                <li>Make sure you’ve practised your build in the <a href="https://wiki.guildwars2.com/wiki/Special_Forces_Training_Area">Special Forces Training Area</a>. You will find a rotation video and step-by-step guide on the Snow Crows page of your chosen class and build.</li>
+                <li>Make sure you’ve practised your build in the <a href="https://wiki.guildwars2.com/wiki/Special_Forces_Training_Area">Special Forces Training Area</a>. You will find a rotation video and step-by-step guide on the Snow Crows page of your chosen class and build. You will also find class guides at the top of the page that are an immensely helpful resource to guide you through what to do on your class for each boss.</li>
             </ol>
             <p><img src="https://i.imgur.com/OyILYDs.png" alt="Rotation" style="max-width:700px"></p>
             <h2 id="joining-your-first-rti-raid">Joining Your First RTI Raid</h2>
@@ -88,7 +88,7 @@
             </ol>
             <p><img src="https://i.imgur.com/Z4bql1B.png" alt="Current Raids" style="max-width:700px"></p>
             <ol start="2">
-                <li>There will be a message at the top of the channel with information about the raid. Make sure to read this information to see when the raid is happening, check whether you are suitable for the raid, and understand what is expected of you and what you can expect.</li>
+                <li>There will be a message at the top of the channel with information about the raid. Make sure to read this information to see when the raid is happening, check whether you are suitable for the raid, and understand what is expected of you and what you can expect. Most RTI raids come in the form of trainings or kill runs, where the former is suitable for newbies and the latter is suitable for more experienced players.</li>
             </ol>
             <p><img src="https://i.imgur.com/ngfzYKH.png" alt="Raid Example" style="max-width:700px"></p>
             <ol start="3">
