Edit quickstart guide with changes suggested by commanders

--- a/Raid Quickstart Guide.html
+++ b/Raid Quickstart Guide.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome file</title>
     <link rel = "stylesheet"
-    type = "text/css"
-    href = "stylesheet.css"/>
+        type = "text/css"
+        href = "stylesheet.css"/>
 </head>
 
 <body class="stackedit">
@@ -75,7 +75,7 @@
             </ol>
             <p><img src="https://i.imgur.com/dq045jV.png" alt="Daredevil Training" style="max-width:700px"></p>
             <ol start="2">
-                <li>Make sure you have your masteries all set up. These are the masteries we recommend working towards:</li>
+                <li>Make sure you have your masteries all set up by gathering experience and mastery points in Heart of Thorns and Path of Fire. You can start working towards raid masteries after having completed a single raid boss. These are the masteries we recommend working towards:</li>
             </ol>
             <p><img src="https://i.imgur.com/S7d7Ie3.png" alt="Masteries" style="max-width:1500px"></p>
             <ol start="3">
@@ -94,7 +94,7 @@
             <ol start="3">
                 <li>Sign up to the raid by pressing the pencil icon (📝) at the bottom of the message.</li>
             </ol>
-            <p><img src="https://i.imgur.com/wiFufBQ.png" alt="Raid Signup" style="max-width:700px"></p>
+            <p><img src="https://i.imgur.com/EgPD6rK.png" alt="Raid Signup" style="max-width:700px"></p>
             <ol start="4">
                 <li>You will be sent a private message asking you what role to sign up as. Sign up for the role you plan on attending the raid as. If that role is full, you can sign up as reserve and get notified if a spot opens up in the raid, in which case you should sign up for the core role as soon as you can before the spot is taken.</li>
             </ol>
@@ -102,20 +102,20 @@
             <ol start="5">
                 <li>On the day and time of the run, if you signed up as a core role and not as a reserve, the commander will ping you with a <code>/sqjoin</code> command that you can type in the in-game chatbox and press Enter to join the raid squad.</li>
             </ol>
-            <p><img src="https://i.imgur.com/GeEKzFw.png" alt="Sqjoin" style="max-width:700px"></p>
+            <p><img src="https://i.imgur.com/FNdTGU5.png" alt="Sqjoin" style="max-width:700px"></p>
             <ol start="6">
                 <li>Go into Lion’s Arch Aerodrome, join the raid wing instance, and enjoy the RTI raid!</li>
             </ol>
             <p><img src="https://i.imgur.com/mmfWus7.png" alt="RTI Raid" style="max-width:700px"></p>
-            <p>As an additional note, use the <code>#training_requests</code> channel in the RTI Discord if you are new to certain raid wings to request them and get priority to join future raid trainings on those wings.</p>
+            <p>As an additional note, use the <code>#training_requests</code> channel in the RTI Discord if you are new to certain raid wings to request them and get priority to join future raid trainings on those wings. Do note that you need to have given us your <a href="https://account.arena.net/applications">API key</a> in your RTI application OR when filling in your training request to be able to use this feature!</p>
             <h2 id="tips-any-new-raider-should-know">Tips Any New Raider Should Know</h2>
             <ol>
                 <li>When you kill a raid boss, you get its tokens (referred to as “KP”). Keep these! Pugs want to see at LEAST a wing’s final boss’ KP to gauge your experience level.</li>
-                <li>You can repair your armour in raids at Ley Rifts with the mastery.</li>
+                <li>You can repair your armour in raids at Ley Rifts with the mastery. If you don’t have this mastery, you can use the anvil present at the start of every raid wing.</li>
                 <li>If you get any spare minis from raid bosses, you can convert them into raid currency at any raid vendor.</li>
-                <li>Opening a raid wing instance will stop you where you left off in that week.</li>
-                <li>If you get someone to open an instance at a particular boss for you, don’t load into that instance until they’ve confirmed that they’re loaded in.</li>
-                <li>Doing a raid boss more than once doesn’t give more rewards. Every Monday morning, progress on raid bosses is reset and you can get rewards on every boss again.</li>
+                <li>If you open a raid wing instance of a wing you haven’t completed all the bosses for that week, then it will open with your progress saved.</li>
+                <li>If you get someone to open an instance at a particular boss for you, don’t “opener snipe”, which is loading into that instance until they’ve confirmed that they’re loaded in.</li>
+                <li>Doing a raid boss more than once in a week doesn’t give more rewards. Every Monday morning, progress on raid bosses is reset and you can get rewards on every boss again.</li>
                 <li>Bind your skills to buttons, including your Special Action Key. Don’t skill click!</li>
                 <li>In Graphics Settings, turn up your <code>Character Model Limit</code> for raids, set <code>Shaders</code> to at least <code>Medium</code>, and turn on <code>Effect LOD</code>.</li>
                 <li>In General Settings, turn on <code>Show Skill Recharge</code>, <code>Show Target Health Percent</code>, and <code>Lock Ground Target at Maximum Skill Range</code>.</li>
@@ -128,7 +128,7 @@
                 <li>Exotic armour has a tiny loss in stats compared to ascended armour. You can get exotic armour of any stat from many areas, such as Bladed armour in Verdant Brink.</li>
                 <li>Check if exotic equipment is salvageable before slotting in expensive runes/sigils. Karma armour or armour from levelling, for example, is not salvageable.</li>
                 <li>Stand tightly in the stack as often as possible. This is where all the boons and healing is!</li>
-                <li>Often, ascended food is cheaper to craft than its exotic counterpart.</li>
+                <li>Sometimes, ascended food is cheaper to craft than its exotic counterpart. Use <a href="https://gw2efficiency.com/crafting/calculator">GW2Efficiency</a> to compare prices!</li>
                 <li>The 1-hour version of enhancements is much more cost-efficient than the 30-minute variant.</li>
                 <li>You can filter most raid sellers and guilds looking for members from the Raid LFG by entering <code>-[</code> into the search bar.</li>
                 <li>Doing Strikes and Fractals nets you currency for ascended gear.</li>
@@ -136,12 +136,14 @@
                 <li>If you miss a ready check and can’t ready up, press <code>P</code> or click the arrow at the top left of the squad UI and ready up from there.</li>
                 <li>You can stat-swap ascended gear in the Mystic Forge very cheaply, but be careful because you lose your upgrades inside it.</li>
                 <li>There is a red bar indicator below your skills when you’re out of range of your target.</li>
-                <li>The <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_I:_Experimental_Armor">Envoy I collection</a> is a great source of ascended armour of any weight of your choosing.</li>
+                <li>The <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_I:_Experimental_Armor">Envoy I collection</a> is a basically free set of ascended armour of any weight/stats of your choosing.</li>
                 <li>The weight you choose in the <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_II:_Refined_Armor">Envoy II collection</a> is what you’re stuck with for legendary armour.</li>
                 <li>Know your CC skills and which CC of yours is more impactful. <a href="https://wiki.guildwars2.com/wiki/Defiance_bar">This</a> Wiki page helps a lot with that!</li>
                 <li>Many skills, traits, and upgrades rely on you being able to flank the boss. This counts for both being behind the boss and to the side of the boss.</li>
                 <li>On almost all bosses, standing behind the raid boss is recommended to avoid taking unnecessary damage that should only be designated for the tank.</li>
                 <li>Party chat (<code>/p</code>) is only visible to people in your squad subgroup. Squad chat (<code>/d</code>) is visible to everyone in the squad.</li>
+                <li>You can prioritise whom to resurrect by clicking on their name in the squad UI before beginning to resurrect, which will target their downed bodies.</li>
+                <li>If everyone dies while fighting a raid boss (even by using <code>/gg</code>), they respawn with their cooldowns reset.</li>
                 <li>Raids have a reputation of being full of toxicity and elitism, but you’ll find that this isn’t nearly as true as people think. Don’t get disheartened!</li>
             </ol>
         </div>
