--- a/Raid Quickstart Guide.html
+++ b/Raid Quickstart Guide.html
@@ -109,42 +109,62 @@
             <p><img src="https://i.imgur.com/mmfWus7.png" alt="RTI Raid" style="max-width:700px"></p>
             <p>As an additional note, use the <code>#training_requests</code> channel in the RTI Discord if you are new to certain raid wings to request them and get priority to join future raid trainings on those wings. Do note that you need to have given us your <a href="https://account.arena.net/applications">API key</a> in your RTI application OR when filling in your training request to be able to use this feature!</p>
             <h2 id="tips-any-new-raider-should-know">Tips Any New Raider Should Know</h2>
+            <p><strong>General:</strong></p>
             <ol>
-                <li>When you kill a raid boss, you get its tokens (referred to as “KP”). Keep these! Pugs want to see at LEAST a wing’s final boss’ KP to gauge your experience level.</li>
                 <li>You can repair your armour in raids at Ley Rifts with the mastery. If you don’t have this mastery, you can use the anvil present at the start of every raid wing.</li>
-                <li>If you get any spare minis from raid bosses, you can convert them into raid currency at any raid vendor.</li>
-                <li>If you open a raid wing instance of a wing you haven’t completed all the bosses for that week, then it will open with your progress saved.</li>
                 <li>If you get someone to open an instance at a particular boss for you, don’t “opener snipe”, which is loading into that instance until they’ve confirmed that they’re loaded in.</li>
-                <li>Doing a raid boss more than once in a week doesn’t give more rewards. Every Monday morning, progress on raid bosses is reset and you can get rewards on every boss again.</li>
-                <li>Bind your skills to buttons, including your Special Action Key. Don’t skill click!</li>
-                <li>In Graphics Settings, turn up your <code>Character Model Limit</code> for raids, set <code>Shaders</code> to at least <code>Medium</code>, and turn on <code>Effect LOD</code>.</li>
-                <li>In General Settings, turn on <code>Show Skill Recharge</code>, <code>Show Target Health Percent</code>, and <code>Lock Ground Target at Maximum Skill Range</code>.</li>
-                <li>In General Settings, disable <code>Melee Attack Assist</code> and <code>Double Tap To Dodge</code>.</li>
+                <li>If you open a raid wing instance of a wing you haven’t completed all the bosses for that week, then it will open with your progress saved.</li>
                 <li><code>/gg</code> allows you to quickly suicide without damaging your armour. It’s used to reset a raid boss attempt to try again.</li>
                 <li>You can use <code>/gg</code> to teleport to the squad upon entering an instance.</li>
-                <li>Turn up effects volume - many attacks in raids have sound cues!</li>
+                <li>If everyone dies while fighting a raid boss (even by using <code>/gg</code>), they respawn with their cooldowns reset.</li>
+                <li>You can filter most raid sellers and guilds looking for members from the Raid LFG by entering <code>-[</code> into the search bar.</li>
+                <li>If you miss a ready check and can’t ready up, press <code>P</code> or click the arrow at the top left of the squad UI and ready up from there.</li>
+                <li>Party chat (<code>/p</code>) is only visible to people in your squad subgroup. Squad chat (<code>/d</code>) is visible to everyone in the squad.</li>
+                <li>LFG squads often ask for things like “40KP” or “200LI”. They expect you to, upon entering, hold Ctrl and click spam 3-4 times on your KP or LI in your inventory to prove you have it.</li>
+                <li>Raids have a reputation of being full of toxicity and elitism, but you’ll find that this isn’t nearly as true as people think. Don’t get disheartened!</li>
+            </ol>
+            <p><strong>Settings:</strong></p>
+            <ol start="12">
+                <li>In Graphics Settings, turn up your <code>Character Model Limit</code> for raids to be able to see all mechanics/attacks.</li>
+                <li>In Graphics Settings, set <code>Shaders</code> to at least <code>Medium</code> or some arena floors won’t render correctly.</li>
+                <li>In Graphics Settings, turn on <code>Effect LOD</code> so that other people’s spell effects don’t clutter your screen and make it difficult to see what’s going on.</li>
+                <li>In General Settings, turn on <code>Show Skill Recharge</code> so you can see your cooldowns more precisely.</li>
+                <li>In General Settings, turn on <code>Show Target Health Percent</code> so you can see exactly what percentage the boss’ health is at.</li>
+                <li>In General Settings, turn on <code>Lock Ground Target at Maximum Skill Range</code> to make it much easier to cast targeted skills at long distances.</li>
+                <li>In General Settings, disable <code>Melee Attack Assist</code> or else you won’t easily be able to enter the boss’ hitbox (something you need to do often in raids).</li>
+                <li>In General Settings, disable <code>Double Tap To Dodge</code> because it makes it difficult to make precise movements or dodge with precise timings.</li>
+                <li>Bind your skills to buttons, including your Special Action Key. Avoid “skill-clicking” (clicking on your skill icons to cast them) as much as possible!</li>
                 <li>Keep track of your mouse cursor in raids. Download <a href="https://dragonrisegames.com/yolomouse">YoloMouse</a>!</li>
-                <li>If you want to play as DPS, have a condition and power DPS build ready. Many bosses favour power DPS and many others favour condition DPS.</li>
+            </ol>
+            <p><strong>Gearing:</strong></p>
+            <ol start="22">
                 <li>Exotic armour has a tiny loss in stats compared to ascended armour. You can get exotic armour of any stat from many areas, such as Bladed armour in Verdant Brink.</li>
                 <li>Check if exotic equipment is salvageable before slotting in expensive runes/sigils. Karma armour or armour from levelling, for example, is not salvageable.</li>
-                <li>Stand tightly in the stack as often as possible. This is where all the boons and healing is!</li>
                 <li>Sometimes, ascended food is cheaper to craft than its exotic counterpart. Use <a href="https://gw2efficiency.com/crafting/calculator">GW2Efficiency</a> to compare prices!</li>
                 <li>The 1-hour version of enhancements is much more cost-efficient than the 30-minute variant.</li>
-                <li>You can filter most raid sellers and guilds looking for members from the Raid LFG by entering <code>-[</code> into the search bar.</li>
+                <li>If you want to play as DPS, have a condition and power DPS build ready. Many bosses heavily favour power DPS and many others heavily favour condition DPS.</li>
                 <li>Doing Strikes and Fractals nets you currency for ascended gear.</li>
                 <li>The Advanced Logistics mastery gives you access to vendors that are the only way to get your hands on useful food and enhancement recipes.</li>
-                <li>If you miss a ready check and can’t ready up, press <code>P</code> or click the arrow at the top left of the squad UI and ready up from there.</li>
                 <li>You can stat-swap ascended gear in the Mystic Forge very cheaply, but be careful because you lose your upgrades inside it.</li>
+            </ol>
+            <p><strong>Combat:</strong></p>
+            <ol start="30">
+                <li>Turn up effects volume - many attacks in raids have sound cues!</li>
+                <li>Stand tightly in the stack as often as possible. This is where all the boons and healing is!</li>
                 <li>There is a red bar indicator below your skills when you’re out of range of your target.</li>
-                <li>The <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_I:_Experimental_Armor">Envoy I collection</a> is a basically free set of ascended armour of any weight/stats of your choosing.</li>
-                <li>The weight you choose in the <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_II:_Refined_Armor">Envoy II collection</a> is what you’re stuck with for legendary armour.</li>
                 <li>Know your CC skills and which CC of yours is more impactful. <a href="https://wiki.guildwars2.com/wiki/Defiance_bar">This</a> Wiki page helps a lot with that!</li>
                 <li>Many skills, traits, and upgrades rely on you being able to flank the boss. This counts for both being behind the boss and to the side of the boss.</li>
                 <li>On almost all bosses, standing behind the raid boss is recommended to avoid taking unnecessary damage that should only be designated for the tank.</li>
-                <li>Party chat (<code>/p</code>) is only visible to people in your squad subgroup. Squad chat (<code>/d</code>) is visible to everyone in the squad.</li>
                 <li>You can prioritise whom to resurrect by clicking on their name in the squad UI before beginning to resurrect, which will target their downed bodies.</li>
-                <li>If everyone dies while fighting a raid boss (even by using <code>/gg</code>), they respawn with their cooldowns reset.</li>
-                <li>Raids have a reputation of being full of toxicity and elitism, but you’ll find that this isn’t nearly as true as people think. Don’t get disheartened!</li>
+                <li>You can easily target the raid boss by clicking on their health bar in the raid event information UI at the top right.</li>
+            </ol>
+            <p><strong>Rewards:</strong></p>
+            <ol start="38">
+                <li>When you kill a raid boss, you get its tokens (referred to as “KP”). Keep these! Pugs want to see at LEAST a wing’s final boss’ KP to gauge your experience level.</li>
+                <li>If you get any spare minis from raid bosses, you can convert them into raid currency at any raid vendor.</li>
+                <li>Doing a raid boss more than once in a week doesn’t give more rewards. Every Monday morning, progress on raid bosses is reset and you can get rewards on every boss again.</li>
+                <li>The <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_I:_Experimental_Armor">Envoy I collection</a> is a basically free set of ascended armour of any weight/stats of your choosing.</li>
+                <li>The weight you choose in the <a href="https://wiki.guildwars2.com/wiki/Envoy_Armor_II:_Refined_Armor">Envoy II collection</a> is what you’re stuck with for legendary armour.</li>
             </ol>
         </div>
     </div>
