--- a/Raid Quickstart Guide.html
+++ b/Raid Quickstart Guide.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome file</title>
+    <title>RTI Raid Quickstart Guide</title>
     <link rel = "stylesheet"
         type = "text/css"
         href = "stylesheet.css"/>
