Update from https://github.com/StephanWells/RTI/commit/60991db38d19e870fb964ee0728f8df72827ee2a

--- a/html/Raid Quickstart Guide.html
+++ b/html/Raid Quickstart Guide.html
@@ -34,7 +34,12 @@
         <div class="stackedit__html">
             <h1 id="rti-raid-quickstart">RTI Raid Quickstart</h1>
             <p>If you’re on this page then you might be new to raids and looking to get into the game mode. This game mode has some of the most fun content that Guild Wars 2 has to offer, and this guide will show you how to get started with raiding with our guild! Click on any step in the below list to expand it and get a helpful image.</p>
+            <p><img src="https://github.com/StephanWells/RTI/blob/master/graphics/banners/server_banner.png?raw=true"
+                alt="RTI Banner"
+                style="max-width:400px;">
+            </p>
             <h2 id="joining-rti">Joining RTI</h2>
+            <img src="https://i.imgur.com/64zq4lE.png" alt="Joining RTI" style="max-width:600px; margin-top:-15px">
             <details>
                 <summary>Make sure you’re on the <a href="https://www.discord.gg/rti">RTI discord</a> and that you’ve verified yourself in <code>#welcome</code> to unlock the server!</summary>
                 <p><img src="https://i.imgur.com/gzK72vI.png" alt="Verification" style="max-width:700px"></p>
@@ -56,6 +61,7 @@
                 <p><img src="https://i.imgur.com/IxkITyf.png" alt="Application Sent" style="max-width:700px"></p>
             </details>
             <h2 id="preparing-for-raids">Preparing for Raids</h2>
+            <img src="https://i.imgur.com/PD4Mgez.png" alt="Preparing for Raids" style="max-width:600px; margin-top:-15px; margin-bottom:-15px">
             <h3 id="gearing-up">Gearing up:</h3>
             <details>
                 <summary>Choose the class you wish to raid with. All classes in the game are viable with some build or other. Take a look at the <code>#class_guides</code> channel in the RTI Discord to get a better idea of what class to go for and what a typical RTI raid class composition looks like.</summary>
@@ -83,6 +89,7 @@
                 <p><img src="https://i.imgur.com/OyILYDs.png" alt="Rotation" style="max-width:700px"></p>
             </details>
             <h2 id="joining-your-first-rti-raid">Joining Your First RTI Raid</h2>
+            <img src="https://i.imgur.com/SErWuc7.png" alt="Joining Your First RTI Raid" style="max-width:600px; margin-top:-15px">
             <details>
                 <summary>Every time a new raid is published, a new raid channel is created in the RTI Discord. You can scroll down to the <code>CURRENT RAIDS</code> section to see all of our raid channels, with an indicator next to them indicating if they’re full (🔴) or if spots are still open (🔹). Choose any one of them to view more information about the raid.</summary>
                 <p><img src="https://i.imgur.com/Z4bql1B.png" alt="Current Raids" style="max-width:700px"></p>
@@ -109,6 +116,7 @@
             </details>
             <p>As an additional note, use the <code>#training_requests</code> channel in the RTI Discord if you are new to certain raid wings to request them and get priority to join future raid trainings on those wings. Do note that you need to have given us your <a href="https://account.arena.net/applications">API key</a> in your RTI application OR when filling in your training request to be able to use this feature!</p>
             <h2 id="tips-any-new-raider-should-know">Tips Any New Raider Should Know</h2>
+            <img src="https://i.imgur.com/1iHEgp1.png" alt="Tips Any New Raider Should Know" style="max-width:600px; margin-top:-15px">
             <p><strong>General:</strong></p>
             <ol>
                 <li>You can repair your armour in raids at Ley Rifts with the mastery. If you don’t have this mastery, you can use the anvil present at the start of every raid wing.</li>
