Update from https://github.com/StephanWells/RTI/commit/6dcebac471ffeede0531f9dc756ce4439fc8c3bd

--- a/html/Raid Quickstart Guide.html
+++ b/html/Raid Quickstart Guide.html
@@ -124,7 +124,7 @@
                     Make sure you have your masteries all set up by gathering experience and mastery points in Heart of Thorns and Path of Fire. You can start working towards raid masteries after having completed a single raid boss. These are the masteries we recommend working towards:
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/rn8G8Xm.png" alt="Masteries" style="max-width:1350px"></p>
+                    <p><img src="https://i.imgur.com/twaX5ID.png" alt="Masteries" style="max-width:1350px"></p>
                 </div>
             </div>
             <div class="collapse">
