Update from https://github.com/StephanWells/RTI/commit/8cc3c1659b8d39384354429f0ee882b6c41b7730

--- a/html/Raid Quickstart Guide.html
+++ b/html/Raid Quickstart Guide.html
@@ -45,10 +45,10 @@
             <img src="https://i.imgur.com/64zq4lE.png" alt="Joining RTI" style="max-width:600px; margin-top:-15px">
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    Make sure you’re on the <a href="https://www.discord.gg/rti">RTI discord</a> and that you’ve verified yourself in <code>#welcome</code> to unlock the server!
+                    Make sure you’re on the <a href="https://www.discord.gg/rti">RTI discord</a>!
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/gzK72vI.png" alt="Verification" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/aLQmmYJ.png" alt="RTI Discord" style="max-width:700px"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -61,10 +61,10 @@
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                Go to the <code>#join_us</code> channel and hit the checkbox to join RTI.
+                Go to the <code>#welcome</code> channel and hit the checkbox to join our community.
             </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/tYyfI0j.png" alt="Joining RTI" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/exGiASr.png" alt="Joining RTI" style="max-width:700px"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -99,7 +99,7 @@
                     Choose a build to use for your class on <a href="https://www.snowcrows.com/">Snow Crows</a>. Builds broadly fall under categories of DPS (damage-oriented), boon support (giving important boons like quickness/might or important buffs like warrior banners), or healer (often giving boons while also being able to heal allies). Consult <code>#class_guides</code> to get a better idea of what support builds we tend to use and what DPS builds we recommend.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/imbm1tJ.png" alt="Builds" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/gw5qmUQ.png" alt="Builds" style="max-width:700px"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -107,7 +107,7 @@
                     Gear those builds. Those builds on Snow Crows assume full ascended rarity, but for RTI, a good standard to follow is exotic armour and ascended weapons/trinkets. The most important thing is that the stats, runes, and sigils are correct! Infusions are unimportant. You can find how to get gear <a href="https://wiki.guildwars2.com/wiki/User:Tanetris/So_You_Want_To_Gear_a_Character">here</a>.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/9S2fxGI.png" alt="Example Gear" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/iTOHmFt.png" alt="Example Gear" style="max-width:700px"></p>
                 </div>
             </div>
             <h3 id="other-preparation">Other preparation:</h3>
@@ -132,7 +132,7 @@
                     Make sure you’ve practised your build in the <a href="https://wiki.guildwars2.com/wiki/Special_Forces_Training_Area">Special Forces Training Area</a>. You will find a rotation video and step-by-step guide on the Snow Crows page of your chosen class and build. You will also find class guides at the top of the page that are an immensely helpful resource to guide you through what to do on your class for each boss.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/OyILYDs.png" alt="Rotation" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/dqhiSG5.png" alt="Rotation" style="max-width:700px"></p>
                 </div>
             </div>
             <h2 id="joining-your-first-rti-raid">Joining Your First RTI Raid</h2>
