Update from https://github.com/Raid-Training-Initiative/RTI/commit/b4b73a25809bd75083e41166476bec3726ba2b69

--- a/html/Raid Quickstart Guide.html
+++ b/html/Raid Quickstart Guide.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RTI Raid Quickstart Guide</title>
-    <link rel = "stylesheet"
-        type = "text/css"
-        href = "stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="collapse.css"/>
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -37,7 +35,7 @@
         <div class="stackedit__html">
             <h1 id="rti-raid-quickstart">RTI Raid Quickstart</h1>
             <p>If you’re on this page then you might be new to raids and looking to get into the game mode. This game mode has some of the most fun content that Guild Wars 2 has to offer, and this guide will show you how to get started with raiding with our guild! Click on any step in the below list to expand it and get a helpful image.</p>
-            <p><img src="https://github.com/StephanWells/RTI/blob/master/graphics/banners/server_banner.png?raw=true"
+            <p><img src="https://github.com/Raid-Training-Initiative/RTI/blob/master/graphics/banners/server_banner.png?raw=true"
                 alt="RTI Banner"
                 style="max-width:400px;">
             </p>
@@ -48,7 +46,7 @@
                     Make sure you’re on the <a href="https://www.discord.gg/rti">RTI discord</a>!
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/aLQmmYJ.png" alt="RTI Discord" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/aLQmmYJ.png" alt="RTI Discord"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -61,18 +59,18 @@
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                Go to the <code>#welcome</code> channel and hit the checkbox to join our community.
-            </div>
+                    Go to the <code>#welcome</code> channel and hit the ✅ <strong>Join</strong> button to join our community.
+                </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/exGiASr.png" alt="Joining RTI" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/tYyfI0j.png" alt="Joining RTI"></p>
                 </div>
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    Respond to the questions that the bot asks you in Discord private messages.
+                    Fill in the form.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/9ml7oFu.png" alt="RTI DMs" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/9ml7oFu.png" alt="RTI DMs"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -80,7 +78,7 @@
                     Press the checkbox to confirm your application. It will be sent to officers who will manually review it and approve your application shortly.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/IxkITyf.png" alt="Application Sent" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/IxkITyf.png" alt="Application Sent"></p>
                 </div>
             </div>
             <h2 id="preparing-for-raids">Preparing for Raids</h2>
@@ -91,23 +89,23 @@
                     Choose the class you wish to raid with. All classes in the game are viable with some build or other. Take a look at the <code>#class_guides</code> channel in the RTI Discord to get a better idea of what class to go for and what a typical RTI raid class composition looks like.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/tqA6Bup.png" alt="Class Guides" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/tqA6Bup.png" alt="Class Guides"></p>
                 </div>
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    Choose a build to use for your class on <a href="https://www.snowcrows.com/">Snow Crows</a>. Builds broadly fall under categories of DPS (damage-oriented), boon support (giving important boons like quickness/might or important buffs like warrior banners), or healer (often giving boons while also being able to heal allies). Consult <code>#class_guides</code> to get a better idea of what support builds we tend to use and what DPS builds we recommend.
+                    Choose a build to use for your class on <a href="https://www.snowcrows.com/">Snow Crows</a>. Builds broadly fall under categories of DPS (damage-oriented), boon DPS (giving important boons like quickness/alacrity), or healer (giving boons while also being able to heal allies). Consult <code>#class_guides</code> to get a better idea of what builds we recommend.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/gw5qmUQ.png" alt="Builds" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/imbm1tJ.png" alt="Builds"></p>
                 </div>
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    Gear those builds. Those builds on Snow Crows assume full ascended rarity, but for RTI, a good standard to follow is exotic armour and ascended weapons/trinkets. The most important thing is that the stats, runes, and sigils are correct! Infusions are unimportant. You can find how to get gear <a href="https://wiki.guildwars2.com/wiki/User:Tanetris/So_You_Want_To_Gear_a_Character">here</a>.
+                    Gear those builds. Those builds on Snow Crows assume full ascended rarity, but for RTI, a good standard to follow is exotic armour and ascended weapons/trinkets. The most important thing is that the stats, runes, sigils, and relic are correct! Infusions are unimportant. You can find how to get gear <a href="https://wiki.guildwars2.com/wiki/User:Tanetris/So_You_Want_To_Gear_a_Character">here</a>.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/iTOHmFt.png" alt="Example Gear" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/9S2fxGI.png" alt="Example Gear"></p>
                 </div>
             </div>
             <h3 id="other-preparation">Other preparation:</h3>
@@ -116,7 +114,7 @@
                     Make sure your character’s elite specialisation for the chosen build is unlocked. For example, if you choose Power Staff Daredevil as your build, make sure your Thief has the Daredevil specialisation fully unlocked.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/dq045jV.png" alt="Daredevil Training" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/dq045jV.png" alt="Daredevil Training"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -124,7 +122,7 @@
                     Make sure you have your masteries all set up by gathering experience and mastery points in Heart of Thorns and Path of Fire. You can start working towards raid masteries after having completed a single raid boss. These are the masteries we recommend working towards:
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/twaX5ID.png" alt="Masteries" style="max-width:1350px"></p>
+                    <p><img src="https://i.imgur.com/5A2HcBW.png" alt="Masteries" style="max-width:1350px"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -132,33 +130,33 @@
                     Make sure you’ve practised your build in the <a href="https://wiki.guildwars2.com/wiki/Special_Forces_Training_Area">Special Forces Training Area</a>. You will find a rotation video and step-by-step guide on the Snow Crows page of your chosen class and build. You will also find class guides at the top of the page that are an immensely helpful resource to guide you through what to do on your class for each boss.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/dqhiSG5.png" alt="Rotation" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/OyILYDs.png" alt="Rotation"></p>
                 </div>
             </div>
             <h2 id="joining-your-first-rti-raid">Joining Your First RTI Raid</h2>
-            <img src="https://i.imgur.com/SErWuc7.png" alt="Joining Your First RTI Raid" style="max-width:600px; margin-top:-15px">
+            <p><img src="https://i.imgur.com/SErWuc7.png" alt="Joining Your First RTI Raid"></p>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
                     Every time a new raid is published, a new raid channel is created in the RTI Discord. You can scroll down to the <code>CURRENT RAIDS</code> section to see all of our raid channels, with an indicator next to them indicating if they’re full (🔴) or if spots are still open (🔹). Choose any one of them to view more information about the raid.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/Z4bql1B.png" alt="Current Raids" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/Z4bql1B.png" alt="Current Raids"></p>
                 </div>
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    There will be a message at the top of the channel with information about the raid. Make sure to read this information to see when the raid is happening, check whether you are suitable for the raid, and understand what is expected of you and what you can expect. Most RTI raids come in the form of trainings or kill runs, where the former is suitable for newbies and the latter is suitable for more experienced players.
+                    There will be a message at the top of the channel with information about the raid. Make sure to read this information to see when the raid is happening, check whether you are suitable for the raid, and understand what is expected of you and what you can expect. Most RTI raids come in the form of trainings, practice runs, or kill runs. Training runs are for completely new players and will have basic explanations on everything. Practice runs are for people who have done the fights at least once before but still want to get better at the mechanics. Kill runs are for experienced people that want to go in and clear the encounters.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/ngfzYKH.png" alt="Raid Example" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/ngfzYKH.png" alt="Raid Example"></p>
                 </div>
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    Sign up to the raid by pressing the pencil icon (📝) at the bottom of the message.
+                    Sign up to the raid by pressing the 📝 <strong>Register</strong> button at the bottom of the message.
                 </div>
                 <div class="collapse-body">
-                    <p><img src="https://i.imgur.com/EgPD6rK.png" alt="Raid Signup" style="max-width:700px"></p>
+                    <p><img src="https://i.imgur.com/EgPD6rK.png" alt="Raid Signup"></p>
                 </div>
             </div>
             <div class="collapse">
@@ -185,7 +183,7 @@
                     <p><img src="https://i.imgur.com/mmfWus7.png" alt="RTI Raid" style="max-width:700px"></p>
                 </div>
             </div>
-            <p>As an additional note, use the <code>#training_requests</code> channel in the RTI Discord if you are new to certain raid wings to request them and get priority to join future raid trainings on those wings. Do note that you need to have given us your <a href="https://account.arena.net/applications">API key</a> in your RTI application OR when filling in your training request to be able to use this feature!</p>
+            <p>As an additional note, use the <code>#training_requests</code> channel in the RTI Discord if you are new to certain raid wings to request them and get priority to join future raid trainings on those wings. We even offer this service to people who have cleared the encounters before but want to learn new special roles such as tanking. Do note that you need to have given us your <a href="https://account.arena.net/applications">API key</a> in your RTI application OR when filling in your training request to be able to use this feature!</p>
             <h2 id="tips-any-new-raider-should-know">Tips Any New Raider Should Know</h2>
             <img src="https://i.imgur.com/1iHEgp1.png" alt="Tips Any New Raider Should Know" style="max-width:600px; margin-top:-15px">
             <p><strong>General:</strong></p>
