Update from https://github.com/Raid-Training-Initiative/RTI/commit/f10e29c94ff2c86de111cd9c077aa6f168568752

--- a/html/Raid Quickstart Guide.html
+++ b/html/Raid Quickstart Guide.html
@@ -75,7 +75,7 @@
             </div>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
-                    Press the checkbox to confirm your application. It will be sent to officers who will manually review it and approve your application shortly.
+                    Press the <strong>Submit</strong> button to confirm your application. It will be sent to officers who will manually review it and approve your application shortly.
                 </div>
                 <div class="collapse-body">
                     <p><img src="https://i.imgur.com/IxkITyf.png" alt="Application Sent"></p>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <h2 id="joining-your-first-rti-raid">Joining Your First RTI Raid</h2>
-            <p><img src="https://i.imgur.com/SErWuc7.png" alt="Joining Your First RTI Raid"></p>
+            <p><img src="https://i.imgur.com/SErWuc7.png" alt="Joining Your First RTI Raid" style="max-width:600px; margin-top:-15px; margin-bottom:-15px"></p>
             <div class="collapse">
                 <div class="collapse-header"><i class="material-icons">expand_more</i>
                     Every time a new raid is published, a new raid channel is created in the RTI Discord. You can scroll down to the <code>CURRENT RAIDS</code> section to see all of our raid channels, with an indicator next to them indicating if they’re full (🔴) or if spots are still open (🔹). Choose any one of them to view more information about the raid.
